style-guide/source/css/components/_menu.scss
.menu{
  height: 100%;
  width: 100%;
}

// Menu Elements
// ----------------------
.menu__link-list{
  list-style:none;
  padding-left: $unit-4;
  a{
    box-shadow: none;
    display: inline-block;
    padding: $unit 0;
  }
}

// Menu Modifiers
// ----------------------
.menu--fixed{
  position: fixed;
  width: $unit-8 *8;
  overflow: auto;
}

// Media Querie
// ----------------------
@media (max-width: $break-default){
  .menu--fixed{
    background: white;
    width: initial;
    top:0;
    right: 0;
    left: 0;
    bottom: 0;
    padding-top: $unit-8 * 2;
    text-align: center;
    font-size: $unit-4 + $unit;
  }
}

